# env-tool

./: LICENSE  README.md  install.ps1  install.sh  pyproject.toml
src/envtool/: cli.py  core.py
