[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "env-tool"
version = "1.2.0"
description = "Professional Python Virtual Environment Manager"
readme = "README.md"
authors = [{ name = "Ali Hamza" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0",
    "rich>=10.0",
    "requests>=2.25.0",
]

[project.scripts]
env = "envtool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
